/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.1.1/userguide/building_java_projects.html
 */

plugins {
    id 'com.github.teruteru128.study.java-application-conventions'
    id 'org.javamodularity.moduleplugin' version '1.8.15' apply true
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

version = '1.1.0.1-SNAPSHOT'

javafx {
    version = "22.0.1"
    modules = [ 'javafx.controls' ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

application {
    mainModule = 'com.github.teruteru.study'
    mainClass = 'com.github.teruteru128.study.Main'
    applicationDefaultJvmArgs = [
            '--enable-native-access=com.github.teruteru.study,com.github.teruteru.foreign.gmp'
    ]
}

run {
    enableAssertions = true
}

dependencies {
    implementation project(':bitmessage')
    implementation project(':encode')
    implementation project(':foreign')
    implementation project(':gmp')
    implementation project(':resources')
    implementation project(':time')

    // https://mvnrepository.com/artifact/org.apache.commons/commons-rng-simple
    implementation 'org.apache.commons:commons-rng-simple:1.5'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-statistics-distribution
    implementation 'org.apache.commons:commons-statistics-distribution:1.0'

    // https://mvnrepository.com/artifact/commons-io/commons-io
    implementation 'commons-io:commons-io:2.16.1'

    // https://mvnrepository.com/artifact/org.bouncycastle/bcmail-jdk18on
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'

    // https://mvnrepository.com/artifact/com.twitter.twittertext/twitter-text
    implementation 'com.twitter.twittertext:twitter-text:3.1.0'

    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation 'org.slf4j:slf4j-api:2.0.13'

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'

    // https://github.com/greymd/CVE-2021-44228
    // https://mvnrepository.com/artifact/com.unboundid/unboundid-ldapsdk
    implementation 'com.unboundid:unboundid-ldapsdk:7.0.0'

    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
    implementation 'org.xerial:sqlite-jdbc:3.45.3.0'

    // https://mvnrepository.com/artifact/org.postgresql/postgresql
    implementation 'org.postgresql:postgresql:42.7.3'

    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'

    // https://mvnrepository.com/artifact/org.openapitools/jackson-databind-nullable
    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'

    // https://picocli.info/
    // https://mvnrepository.com/artifact/info.picocli/picocli
    implementation 'info.picocli:picocli:4.7.6'

    // https://mvnrepository.com/artifact/picocli-codegen/picocli
    annotationProcessor 'info.picocli:picocli-codegen:4.7.6'
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.group}/${project.name}", "-implicit:class"]
}
